Week 3 instructions